Increase menu height to prevent a scrollbar in the menu because of too many social icons

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -128,7 +128,7 @@ body {
 }
 
 .navbar-collapse {
-  max-height: 73vh;
+  max-height: 82vh;
   overflow-y: auto;
   overflow-x: hidden;
   padding-left: 15px;
